# dvr-client

./: .clang-tidy-ignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  Dockerfile.release  README.md  config.yaml  docker-compose.yml  pkglist  pkglist_release.txt
src/: ConfigService.h  CurlHttpClient.h  CurlUV.h  EventService.h  FormatFilename.h  InputStream.h  LibuvCurlCpp.h  NotificationService.h  Options.h  OutputStream.h  Packet.h  Rescale.h  S3Client.h  S3Service.h  SharedQueue.h  StreamWorker.h  main.cpp  utils.h
tests/: benchmark.cpp  config_file_test.cpp  config_test.yaml
tests/integration_tests/s3_tests/: main.cpp
tests/unit_tests/: config_file_test.cpp  queue_test.cpp
